--- a/.gitignore
+++ b/.gitignore
@@ -27,21 +27,21 @@ MANIFEST
 venv/
 env/
 ENV/
+tise_scraper_env/
 
 # Downloaded content (you may want to keep this private)
-data/downloads/
-data/*.db
-hidden info/
-
-# Logs
+data/
 logs/
-*.log
+
+# Development notes and API info
+hidden info/
 
 # IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
+*.code-workspace
 
 # OS
 .DS_Store
